--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
           echo '${{ steps.fetch-dynamic-secrets.outputs.postgres_dynamic_secret}}' | jq -r 'to_entries|map("POSTGRES_\(.key|ascii_upcase)=\(.value|tostring)")|.[]' >> $GITHUB_ENV
       - name: tisk
         run: >
-          echo "$GITHUB_ENV"
+          echo "$GITHUB_ENV"          
       - name: Verify Vars
         run: >
-          echo "host: ${{ env.POSTGRES_HOST }}" >> secrets.txt
-          echo "port: ${{ env.POSTGRES_PORT }}" >> secrets.txt
+          echo "host: ${{ env.POSTGRES_PASSWORD }}" >> secrets.txt
+          
                
 
