--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
         run: >
           echo "$GITHUB_ENV"          
       - name: Verify Vars
-        run: >
-          echo "host: ${{ env.POSTGRES_PASSWORD }}"
-          
+        run: |
+          echo "host: ${{ env.POSTGRES_HOST }}" >> secrets.txt
+          echo "username: ${{ env.POSTGRES_USER }}" >> secrets.txt
                
 
