--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,6 @@ jobs:
           export-secrets-to-outputs: true
           export-secrets-to-environment: true
           api-url: 'https://csm.thalescryptolabs.com/akeyless-api/v2/'
-      - name: Export Secrets to Environment
-        run: >
-          echo '${{ steps.fetch-dynamic-secrets.outputs.postgres_dynamic_secret}}' | jq -r 'to_entries|map("POSTGRES_\(.key|ascii_upcase)=\(.value|tostring)")|.[]' >> $GITHUB_ENV
-      - name: tisk
-        run: >
-          echo "$GITHUB_ENV"          
-      - name: Verify Vars
+      - name: Export Secrets to Environment           
         run: |
-          echo "host: ${{ env.POSTGRES_HOST }}" >> secrets.txt
-          echo "username: ${{ env.POSTGRES_USER }}" >> secrets.txt
-               
-
+         echo '${{ steps.fetch-dynamic-secrets.outputs.postgres_dynamic_secret}}' > someFile.txt
