--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: Fetch Postgres Dynamic Secrets
 'on': push
+on: workflow_dispatch
 jobs:
   fetch_postgres_dynamic_secrets:
     runs-on: self-hosted
